--- a/index2.html
+++ b/index2.html
@@ -4,97 +4,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Lato:400,700&display=swap" />
+    <link rel="stylesheet" href="./assets/css/style2.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Lato:400,700&display=swap" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
     <title>Questionário sobre História da Computação</title>
-    <script></script>
+    <script src="./js/Questionario.js" defer></script>
 </head>
 
-<body>
-    <h1>Questionário sobre História da Computação</h1>
-    <form id="quizForm">
-        <ol>
-            <li>
-                <h3>1. Quais eram os dispositivos utilizados na primeira geração de computadores?</h3>
-                <input type="radio" name="q1" value="c"> a) Circuitos integrados<br>
-                <input type="radio" name="q1" value="b"> b) Transistores<br>
-                <input type="radio" name="q1" value="a"> c) Tubos de vácuo<br>
-                <input type="radio" name="q1" value="d"> d) Microprocessadores<br>
-            </li>
-            <li>
-                <h3>2. Qual matemático introduziu a "régua de cálculo" no século XVII?</h3>
-                <input type="radio" name="q2" value="a"> a) John Napier<br>
-                <input type="radio" name="q2" value="b"> b) Blaise Pascal<br>
-                <input type="radio" name="q2" value="c"> c) Gottfried Wilhelm Leibniz<br>
-                <input type="radio" name="q2" value="d"> d) Alan Turing<br>
-            </li>
-            <li>
-                <h3>3. O que foi desenvolvido por Blaise Pascal, marcando um avanço significativo na história do
-                    computador?</h3>
-                <input type="radio" name="q3" value="a"> a) Régua de cálculo<br>
-                <input type="radio" name="q3" value="b"> b) Ábaco<br>
-                <input type="radio" name="q3" value="c"> c) Roda de Leibniz<br>
-                <input type="radio" name="q3" value="d"> d) Cartões perfurados<br>
-            </li>
-            <li>
-                <h3>4. Qual geração de computadores foi caracterizada pela utilização de transistores?</h3>
-                <input type="radio" name="q4" value="a"> a) Primeira geração<br>
-                <input type="radio" name="q4" value="b"> b) Segunda geração<br>
-                <input type="radio" name="q4" value="c"> c) Terceira geração<br>
-                <input type="radio" name="q4" value="d"> d) Quarta geração<br>
-            </li>
-            <li>
-                <h3>5. O que substituiu os cartões perfurados na entrada de dados durante a segunda geração de
-                    computadores?</h3>
-                <input type="radio" name="q5" value="a"> a) Teclado<br>
-                <input type="radio" name="q5" value="b"> b) Monitor<br>
-                <input type="radio" name="q5" value="c"> c) Rolos de fita perfurada<br>
-                <input type="radio" name="q5" value="d"> d) Scanner<br>
-            </li>
-            <li>
-                <h3>6. Qual componente tecnológico marcou a terceira geração de computadores?</h3>
-                <input type="radio" name="q6" value="a"> a) Válvulas termiônicas<br>
-                <input type="radio" name="q6" value="b"> b) Transistores<br>
-                <input type="radio" name="q6" value="c"> c) Circuitos integrados<br>
-                <input type="radio" name="q6" value="d"> d) Microprocessadores<br>
-            </li>
-            <li>
-                <h3>7. O que caracterizou a quarta geração de computadores?</h3>
-                <input type="radio" name="q7" value="a"> a) Utilização de válvulas termiônicas<br>
-                <input type="radio" name="q7" value="b"> b) Incorporação de circuitos integrados<br>
-                <input type="radio" name="q7" value="c"> c) Introdução de microprocessadores<br>
-                <input type="radio" name="q7" value="d"> d) Uso exclusivo de linguagem assembly<br>
-            </li>
-            <li>
-                <h3>8. Qual tecnologia está associada à quinta geração de computadores?</h3>
-                <input type="radio" name="q8" value="a"> a) Computação binária<br>
-                <input type="radio" name="q8" value="b"> b) Microprocessadores<br>
-                <input type="radio" name="q8" value="c"> c) Inteligência artificial<br>
-                <input type="radio" name="q8" value="d"> d) Transistores<br>
-            </li>
-            <li>
-                <h3>9. O que a nanotecnologia favorece na quinta geração de computadores?</h3>
-                <input type="radio" name="q9" value="a"> a) Componentes maiores<br>
-                <input type="radio" name="q9" value="b"> b) Capacidade de processamento e armazenamento<br>
-                <input type="radio" name="q9" value="c"> c) Consumo excessivo de energia<br>
-                <input type="radio" name="q9" value="d"> d) Diminuição da velocidade<br>
-            </li>
-            <li>
-                <h3>10. Qual dispositivo exemplifica a quinta geração de computadores?</h3>
-                <input type="radio" name="q10" value="a"> a) Mainframes<br>
-                <input type="radio" name="q10" value="b"> b) Apple Macintosh<br>
-                <input type="radio" name="q10" value="c"> c) Smartphones<br>
-                <input type="radio" name="q10" value="d"> d) IBM 360<br>
-            </li>
-        </ol>
-        <input type="submit" value="Verificar Respostas">
+<body class="body">
+    <form class="form" id="quizForm">
+        <h1 class="form_titulo">QUIZ - História dos Computadores</h1>
+        <ul class="form_lista">
+            <div class="form_lista_conteudo">
+                <li>
+                    <h3>1. Quais eram os dispositivos utilizados na primeira geração de computadores?</h3>
+                    <input type="radio" id="q1a" name="q1" value="a">
+                    <label for="q1a">a) Tubos de vácuo</label><br>
+                    <input type="radio" id="q1b" name="q1" value="b">
+                    <label for="q1b">b) Transistores</label><br>
+                    <input type="radio" id="q1c" name="q1" value="c">
+                    <label for="q1c">c) Circuitos integrados</label><br>
+                    <input type="radio" id="q1d" name="q1" value="d">
+                    <label for="q1d">d) Microprocessadores</label><br>
+                </li>
+                <li>
+                    <h3>2. Qual matemático introduziu a "régua de cálculo" no século XVII?</h3>
+                    <input type="radio" id="q2a" name="q2" value="a">
+                    <label for="q2a">a) John Napier</label><br>
+                    <input type="radio" id="q2b" name="q2" value="b">
+                    <label for="q2b">b) Blaise Pascal</label><br>
+                    <input type="radio" id="q2c" name="q2" value="c">
+                    <label for="q2c">c) Gottfried Wilhelm Leibniz</label><br>
+                    <input type="radio" id="q2d" name="q2" value="d">
+                    <label for="q2d">d) Alan Turing</label><br>
+                </li>
+                <li>
+                    <h3>3. O que foi desenvolvido por Blaise Pascal, marcando um avanço significativo na história do
+                        computador?</h3>
+                    <input type="radio" id="q3a" name="q3" value="a">
+                    <label for="q3a">a) Régua de cálculo</label><br>
+                    <input type="radio" id="q3b" name="q3" value="b">
+                    <label for="q3b">b) Ábaco</label><br>
+                    <input type="radio" id="q3c" name="q3" value="c">
+                    <label for="q3c">c) Roda de Leibniz</label><br>
+                    <input type="radio" id="q3d" name="q3" value="d">
+                    <label for="q3d">d) Cartões perfurados</label><br>
+                </li>
+                <li>
+                    <h3>4. Qual geração de computadores foi caracterizada pela utilização de transistores?</h3>
+                    <input type="radio" id="q4a" name="q4" value="a">
+                    <label for="q4a">a) Primeira geração</label><br>
+                    <input type="radio" id="q4b" name="q4" value="b">
+                    <label for="q4b">b) Segunda geração</label><br>
+                    <input type="radio" id="q4c" name="q4" value="c">
+                    <label for="q4c">c) Terceira geração</label><br>
+                    <input type="radio" id="q4d" name="q4" value="d">
+                    <label for="q4d">d) Quarta geração</label><br>
+                </li>
+                <li>
+                    <h3>5. O que substituiu os cartões perfurados na entrada de dados durante a segunda geração de
+                        computadores?</h3>
+                    <input type="radio" id="q5a" name="q5" value="a">
+                    <label for="q5a">a) Teclado</label><br>
+                    <input type="radio" id="q5b" name="q5" value="b">
+                    <label for="q5b">b) Monitor</label><br>
+                    <input type="radio" id="q5c" name="q5" value="c">
+                    <label for="q5c">c) Rolos de fita perfurada</label><br>
+                    <input type="radio" id="q5d" name="q5" value="d">
+                    <label for="q5d">d) Scanner</label><br>
+                </li>
+                <li>
+                    <h3>6. Qual componente tecnológico marcou a terceira geração de computadores?</h3>
+                    <input type="radio" id="q6a" name="q6" value="a">
+                    <label for="q6a">a) Válvulas termiônicas</label><br>
+                    <input type="radio" id="q6b" name="q6" value="b">
+                    <label for="q6b">b) Transistores</label><br>
+                    <input type="radio" id="q6c" name="q6" value="c">
+                    <label for="q6c">c) Circuitos integrados</label><br>
+                    <input type="radio" id="q6d" name="q6" value="d">
+                    <label for="q6d">d) Microprocessadores</label><br>
+                </li>
+                <li>
+                    <h3>7. O que caracterizou a quarta geração de computadores?</h3>
+                    <input type="radio" id="q7a" name="q7" value="a">
+                    <label for="q7a">a) Utilização de válvulas termiônicas</label><br>
+                    <input type="radio" id="q7b" name="q7" value="b">
+                    <label for="q7b">b) Incorporação de circuitos integrados</label><br>
+                    <input type="radio" id="q7c" name="q7" value="c">
+                    <label for="q7c">c) Introdução de microprocessadores</label><br>
+                    <input type="radio" id="q7d" name="q7" value="d">
+                    <label for="q7d">d) Uso exclusivo de linguagem assembly</label><br>
+                </li>
+                <li>
+                    <h3>8. Qual tecnologia está associada à quinta geração de computadores?</h3>
+                    <input type="radio" id="q8a" name="q8" value="a">
+                    <label for="q8a">a) Computação binária</label><br>
+                    <input type="radio" id="q8b" name="q8" value="b">
+                    <label for="q8b">b) Microprocessadores</label><br>
+                    <input type="radio" id="q8c" name="q8" value="c">
+                    <label for="q8c">c) Inteligência artificial</label><br>
+                    <input type="radio" id="q8d" name="q8" value="d">
+                    <label for="q8d">d) Transistores</label><br>
+                </li>
+                <li>
+                    <h3>9. O que a nanotecnologia favorece na quinta geração de computadores?</h3>
+                    <input type="radio" id="q9a" name="q9" value="a">
+                    <label for="q9a">a) Componentes maiores</label><br>
+                    <input type="radio" id="q9b" name="q9" value="b">
+                    <label for="q9b">b) Capacidade de processamento e armazenamento</label><br>
+                    <input type="radio" id="q9c" name="q9" value="c">
+                    <label for="q9c">c) Consumo excessivo de energia</label><br>
+                    <input type="radio" id="q9d" name="q9" value="d">
+                    <label for="q9d">d) Diminuição da velocidade</label><br>
+                </li>
+                <li>
+                    <h3>10. Qual dispositivo exemplifica a quinta geração de computadores?</h3>
+                    <input type="radio" id="q10a" name="q10" value="a">
+                    <label for="q10a">a) Mainframes</label><br>
+                    <input type="radio" id="q10b" name="q10" value="b">
+                    <label for="q10b">b) Apple Macintosh</label><br>
+                    <input type="radio" id="q10c" name="q10" value="c">
+                    <label for="q10c">c) Smartphones</label><br>
+                    <input type="radio" id="q10d" name="q10" value="d">
+                    <label for="q10d">d) IBM 360</label><br>
+                </li>
+            </div>
+        </ul>
+        <input type="submit" value="Verificar Respostas" class="form_verificar">
     </form>
-    <div id="resultado"></div>
-    <a href="index.html">Voltar para a Página Inicial</a>
-    <script src="js/Questionario.js" defer></script>
+    <a href="index.html" class="Voltar">Voltar para a Página Inicial</a>
+    <div id="resultadoContainer"></div>
 </body>
 
 </html>
