feat favicon indexhtml2

--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
     <title>Questionário sobre História da Computação</title>
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <script src="./js/Questionario.js" defer></script>
 </head>
 
